[gd_scene load_steps=2 format=3 uid="uid://be1dyi3ydr8fi"]

[ext_resource type="Script" path="res://AbstractClickerClass.gd" id="1_k4pkf"]

[node name="AbstractClickerScene" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = -304.0
offset_right = -556.0
offset_bottom = -304.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k4pkf")

[node name="ValueResource" type="Label" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 23.0
text = "Resource: 0"
horizontal_alignment = 1

[node name="ButtonDig" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 411.0
offset_top = 288.0
offset_right = 687.0
offset_bottom = 383.0
grow_horizontal = 2
grow_vertical = 2
text = "Dig"

[node name="ButtonDigger" type="Button" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 45.0
offset_right = 233.0
offset_bottom = 114.0
text = "Acquire digger: 10 resource"

[node name="ValueDigger" type="Label" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 123.0
offset_right = 222.0
offset_bottom = 150.0
text = "Diggers: 0"

[node name="DiggerTimer" type="Timer" parent="."]

[node name="MainUiButton" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 57.0
offset_right = 992.0
offset_bottom = 107.0
text = "Main Menu"

[connection signal="button_down" from="ButtonDig" to="." method="_on_button_dig_button_down"]
[connection signal="button_down" from="ButtonDigger" to="." method="_on_button_digger_button_down"]
[connection signal="timeout" from="DiggerTimer" to="." method="_on_digger_timer_timeout"]
[connection signal="button_down" from="MainUiButton" to="." method="_on_main_ui_button_button_down"]
